--- a/CharacterInspect/Pages/Index.cshtml
+++ b/CharacterInspect/Pages/Index.cshtml
@@ -6,5 +6,38 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Search for your World of Warcraft character profile:</p>
 </div>
+
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <form method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Realm">Realm</label>
+                <input asp-for="Realm" class="form-control" />
+                <span asp-validation-for="Realm" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CharacterName">Character Name</label>
+                <input asp-for="CharacterName" class="form-control" />
+                <span asp-validation-for="CharacterName" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+    </div>
+</div>
+
+@if (Model.CharacterProfile != null)
+{
+    <div class="row mt-5">
+        <div class="col-md-6 offset-md-3">
+            <h3>Character Profile</h3>
+            <p>
+                Name: @Model.CharacterProfile["name"]<br />
+                Realm: @Model.CharacterProfile["realm"]["name"]<br />
+                Level: @Model.CharacterProfile["level"]
+            </p>
+        </div>
+    </div>
+}
